@@ -1,5 +1,5 @@
 
-R version 2.4.0 alpha (2006-09-17 r39373)
+R version 2.4.0 RC (2006-09-27 r39543)
 Copyright (C) 2006 The R Foundation for Statistical Computing
 ISBN 3-900051-07-0
 
@@ -101,10 +101,12 @@ integer matrices not yet implemented in 'Matrix'; using 'double' ones' in: Matri
 [2,]   -1    9  100  200
 [3,]   -1   10   17   24
 > 
+> ## testing operations on logical Matrices rather more than indexing:
 > g10 <- m [ m > 10 ]
 > stopifnot(18 == length(g10))
 > stopifnot(10 == length(m[ m <= 10 ]))
-> sel <- (20 < m) & (m < 150)
+> sel <- (20 <  m) & (m <  150)
+> nsel <-(20 >= m) | (m >= 150)
 > (ssel <- as(sel, "sparseMatrix"))
 7 x 4 sparse Matrix of class "lgCMatrix"
             
@@ -116,8 +118,9 @@ integer matrices not yet implemented in 'Matrix'; using 'double' ones' in: Matri
 [6,] . . | |
 [7,] . . | |
 > stopifnot(is(sel, "lMatrix"), is(ssel, "lsparseMatrix"),
-+ 	  identical(  m[ ssel], as.matrix( m)[as.matrix( ssel)]),
-+ 	  identical(  m[!ssel], as.matrix(m)[ as.matrix(!ssel)])
++           identical3(!sel, !ssel, nsel), # !<sparse> is typically dense
++ 	  identical3(m[ sel],  m[ ssel], as.matrix(m)[as.matrix( ssel)]),
++ 	  identical3(m[!sel],  m[!ssel], as.matrix(m)[as.matrix(!ssel)])
 + 	  )
 > 
 > ## more sparse Matrices --------------------------------------
@@ -389,16 +392,16 @@ Ambiguous method selection for "-", target "dgTMatrix#dgTMatrix" (the first of t
 > mc[c(2,5), c(3,5)] <- 3.2
 > validObject(mc)
 [1] TRUE
-> (m. <- mc)
+> m. <- mc
+> mc[4,] <- 0
+> mc
 5 x 7 sparse Matrix of class "dgCMatrix"
                            
 [1,] . .  2.0 4 .   .   241
 [2,] . 1  3.2 3 3.2 202 .  
 [3,] 3 . -1.0 . .   .   243
-[4,] . .  1.0 . .   .   .  
+[4,] . . .    . .   .   .  
 [5,] . 2  3.2 . 3.2 .   .  
-> if(FALSE)## FIXME:
-+  mc[4,] <- 0 # -> error -- another Bug
 > 
 > H <- Hilbert(9)
 > Hc <- as(round(H, 3), "dsCMatrix")# a sparse matrix with no 0 ...
@@ -443,5 +446,5 @@ Ambiguous method selection for "-", target "dgTMatrix#dgTMatrix" (the first of t
  [9,] 0.111 0.100 0.091 0.083 0.077 0.071
 > 
 > cat('Time elapsed: ', proc.time(),'\n') # for ``statistical reasons''
-Time elapsed:  2.594 0.132 3.419 0 0 
+Time elapsed:  2.669 0.112 3.465 0 0 
 > 
